--- a/resources/graphics/ExportCharts.html
+++ b/resources/graphics/ExportCharts.html
@@ -40,9 +40,17 @@
 		background-color: #f0f0f0f0;
 	}
 
-	table tr td:first-child
+	.filasTabla td:first-child
 	{
 		background-color: #ffffff;
+		color: #000000;
+    	font-weight: bold;
+	}
+
+	/*Primera columna de cada fila(la de los nombres de los alumnos)*/
+	.filasImpares td:first-child
+	{
+		background-color: #f0f0f0f0;
 		color: #000000;
     	font-weight: bold;
 	}
