Añadidas las escalas para las Tareas(Assignments).

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -191,7 +191,7 @@
 
 <div id="table_img" style="display: none;"></div>
 
-<script>
+<script type="text/javascript">
 
 //------------------------------------------Opciones para los graficos------------------------------------------------------------------
 
