Cambios menores en los html de los gráficos.

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -140,15 +140,13 @@
 		background-color:  #f2f2f2;
 		box-shadow: inset 0 -3px 0px 0px #25c5d8;
 	}
-	
-	
-	
+
 </style>
 
-<script type="text/javascript" src="Chart.js"></script>
-<script type="text/javascript" src="color-hash.js"></script>
-<script type="text/javascript" src="googleCharts.js"></script>
-<script type="text/javascript" src="html2canvas.js"></script>
+<script type="text/javascript" src="./lib/Chart.js"></script>
+<script type="text/javascript" src="./lib/color-hash.js"></script>
+<script type="text/javascript" src="./lib/googleCharts.js"></script>
+<script type="text/javascript" src="./lib/html2canvas.js"></script>
 
 </head>
 
@@ -383,8 +381,7 @@ var table;
 document.getElementById('btnLineas').disabled = true;
 //Al iniciar el div de la tabla de calificaciones esta oculto
 document.getElementById('table_div').style.display = 'none';
-
-
+//
 document.getElementById('btnLegend').style.backgroundImage = 'url(./../img/visibility.png)';
 
 //------------------------------------------Funciones------------------------------------------------------------------
