--- a/resources/graphics/ExportCharts.html
+++ b/resources/graphics/ExportCharts.html
@@ -380,3 +380,5 @@ function colorHEX(color){
 window.onload = function() {
   generateChart();
 }
+
+// Aqui se añaden los datos de los gráficos y la tabla de calificaciones
