--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -208,7 +208,7 @@ var optionsLineChart = {
 			hoverRadius: 7
 		}, //points
 		line: {
-			tension: 0.4 //disable bezier curves, better performance
+			tension: 0.4 //at 0 disable bezier curves, better performance
 		}
 	}, //elements
 	legend: {
@@ -226,7 +226,7 @@ var optionsLineChart = {
 		mode: 'index',
 		intersect: false,
 		position: 'average',
-		backgroundColor: 'rgba(0, 0, 0, 0.8)',
+		backgroundColor: 'rgba(0, 0, 0, 1)',
 		bodySpacing: 4,
 		cornerRadius: 0,
 		caretSize: 10,
@@ -322,7 +322,7 @@ var optionsRadarChart = {
 		mode: 'index',
 		intersect: true,
 		position: 'average',
-		backgroundColor: 'rgba(0, 0, 0, 0.8)',
+		backgroundColor: 'rgba(0, 0, 0, 1)',
 		bodySpacing: 4,
 		cornerRadius: 0,
 		caretSize: 10,
