--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -8,6 +8,15 @@
 		padding: 0px;
 		margin: 0px;
 	}
+
+	.imginicio
+	{
+		height: 350px;
+		width: 350px;
+		display: block;
+		margin: auto;
+		padding: 10% 0;
+	}
 		
 	.table_div
 	{
@@ -159,7 +168,8 @@
 </div>
 </div>
 
-<div id="inicio">
+<div id="inicio" class="inicio">
+	<img class="imginicio" src="../img/logo.png">
 </div>
 
 <div id="chart-container" class="chart-container">
